# AiSD_Lab1

./: CMakeLists.txt  Polynomial.h  main.cpp
include/Polynomial/: Polynomial.cpp
include/Vector/: Vector.cpp
tests/: tests.cpp
